@@ -6,6 +6,8 @@ Summary of important user-visible changes for signal 1.4.0:
       peak2peak
       peak2rms
       rms
+      udecode
+      uencode
 
  ** Other functions that have been changed for smaller bugfixes,
     increased Matlab compatibility, or performance:
